Cache previous maps; fix zoom out
Hide other states when zooming

Add gradual transition to opacity

Fix transition duration; clean up

Fix warning; use setSelectedRegion to highlight states

Fix text overlap, hovered class becoming transparent

Hide legend for states with zero cases

--- a/src/App.scss
+++ b/src/App.scss
@@ -806,8 +806,8 @@ h6 {
     #outlined-number {
       font-family: 'archia';
       font-size: 0.7rem !important;
-      font-weight: 400;    
-      font-family: 'archia';  
+      font-weight: 400;
+      font-family: 'archia';
       height: 0.1rem;
     }
   }
@@ -1644,10 +1644,6 @@ table {
   z-index: 11;
 }
 
-.map-default {
-  stroke: none;
-}
-
 .map-hover {
   stroke: #ff073a;
   stroke-width: 2;
@@ -1678,7 +1674,7 @@ table {
     display: flex;
     flex-direction: row;
     width: 100%;
-    margin-top: 1rem;
+    margin-top: 4rem;
     overflow: hidden;
 
     svg {
@@ -1693,6 +1689,10 @@ table {
         font-size: 10px;
       }
     }
+  }
+
+  .legend {
+    margin-top: 0;
   }
 
   .back-button {
@@ -1742,8 +1742,9 @@ table {
 
     .unknown {
       position: absolute;
-      top: 6rem;
-      width: 5rem;
+      right: 0;
+      top: 3rem;
+      width: 9rem;
       font-weight: 600;
       font-weight: 0.75rem;
     }
